--- a/Manuscript.tex
+++ b/Manuscript.tex
@@ -78,20 +78,6 @@
 \def\fps@figure{htbp}
 \makeatother
 
-\usepackage{booktabs}
-\usepackage{longtable}
-\usepackage{array}
-\usepackage{multirow}
-\usepackage{wrapfig}
-\usepackage{float}
-\usepackage{colortbl}
-\usepackage{pdflscape}
-\usepackage{tabu}
-\usepackage{threeparttable}
-\usepackage{threeparttablex}
-\usepackage[normalem]{ulem}
-\usepackage{makecell}
-\usepackage{xcolor}
 \makeatletter
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \AtBeginDocument{%
@@ -133,7 +119,7 @@
 \@ifpackageloaded{caption}{}{\usepackage{caption}}
 \@ifpackageloaded{subcaption}{}{\usepackage{subcaption}}
 \makeatother
-\journal{Journal Name}
+\journal{Palaeo3}
 \ifLuaTeX
   \usepackage{selnolig}  % disable illegal ligatures
 \fi
@@ -145,7 +131,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Interspecies comparisons of Mg/Ca ratios in limpet shells},
-  pdfauthor={Niklas Hausmann; Donna Surge; Francisco Zangrando; Angelica Tivoli; Ivan Briz-Godino},
+  pdfauthor={Niklas Hausmann; Donna Surge; Ivan Briz-Godino},
   pdfkeywords={Sclerochronology, Limpets, Elemental Ratio, Mg/Ca},
   colorlinks=true,
   linkcolor={blue},
@@ -167,15 +153,7 @@
 %
 }
 
-\author[3]{Francisco Zangrando%
-%
-}
-
-\author[3]{Angelica Tivoli%
-%
-}
-
-\author[4]{Ivan Briz-Godino%
+\author[3]{Ivan Briz-Godino%
 %
 }
 
@@ -187,14 +165,9 @@ Archäologie},addressline={Ludwig-Lindenschmit-Forum
 Carolina},addressline={104 South Road, 225 Geology
 Building},city={Chapel Hill,
 NC},country={US},countrysep={,},postcode={27599-3315},postcodesep={}}
-\affiliation[3]{organization={CONICET (Consejo Nacional de
-Investigaciones Científicas y Técnicas)},addressline={Avenida Maipú
-305},city={Ushuaia},country={Argentina},countrysep={,},postcode={V9410BJA},postcodesep={}}
-\affiliation[4]{organization={},country={Spain},countrysep={,},postcodesep={}}
+\affiliation[3]{organization={},country={Spain},countrysep={,},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
-
-
 
 
 
@@ -208,18 +181,18 @@ between sea surface temperature and Mg/Ca ratios, this is not the case
 for other patelloid species. \emph{Patella vulgata} and \emph{Nacella
 deaureata} have been studied using Mg/Ca with mixed or contrary results.
 In this study, we present elemental maps of various such species
-together with stable oxygen isotope values for some of the specimens.
-Our dataset also includes specimens that were previously unsuccessful in
-providing significant correlations between δ\textsuperscript{18}O and
-Mg/Ca ratios. By reassessing these previous specimens and including a
-wider range of modern and archaeological samples from three patelloid
-species (\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N.
-magellanica}) we further add to the growing set of evidence for the
-reliable use of Mg/Ca ratios to detect palaeotemperature change and
-serve as a means to determine ontogenetic age and season of capture as
-well as to reveal locations of interest within the growth record
-(i.e.~annual temperature minima and maxima) for the targeted analysis
-using δ\textsuperscript{18}O or clumped oxygen isotope analysis.
+together with stable oxygen isotope values. Our dataset also includes
+specimens that were previously unsuccessful in providing significant
+correlations between \(\delta\)\textsuperscript{18}O and Mg/Ca ratios.
+By reassessing these previous specimens and including a wider range of
+modern and archaeological samples (n=12) from three patelloid species
+(\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N. magellanica}) we
+further add to the growing set of evidence for the reliable use of Mg/Ca
+ratios to detect palaeotemperature change and serve as a means to
+determine ontogenetic age and season of capture as well as to reveal
+locations of interest within the growth record (i.e.~annual temperature
+minima and maxima) for the targeted analysis using
+\(\delta\)\textsuperscript{18}O or clumped oxygen isotope analysis.
 \end{abstract}
 
 
@@ -243,16 +216,17 @@ economies, site occupation on seasonal
 scale \citep{Ortiz2015-mr}, as well as palaeotemperature
 \citep{Fenger2007-gf, Surge2012-ba, Wang2012-ee, Colonese2012-ct, Ferguson2011-zl}.
 Determining past sea surface temperature (SST) change largely relies on
-the measurement of δ\textsuperscript{18}O-values within the calcitic
-parts of the shell, but attempts have been made to also use elemental
-ratios, such as magnesium to calcium (Mg/Ca), to have an alternative
-measure, that potentially provides a more accurate SST estimate than
-δ\textsuperscript{18}O-values, which are also affected by changes in
-salinity. In addition, the data acquisition of elemental ratios ---
-either through laser-ablation-isotope-ratio-mass-spectrometry
-(LA-ICP-MS) or laser induced breakdown spectroscopy (LIBS), can be much
-faster and cost-effective, increasing the number of specimens that can
-be studied overall \citep{Durham2017-fh, Hausmann2023-ih}.
+the measurement of \(\delta\)\textsuperscript{18}O-values within the
+calcitic parts of the shell, but attempts have been made to also use
+elemental ratios, such as magnesium to calcium (Mg/Ca), to have an
+alternative measure, that potentially provides a more accurate SST
+estimate than \(\delta\)\textsuperscript{18}O-values, which are also
+affected by changes in salinity. In addition, the data acquisition of
+elemental ratios --- either through
+laser-ablation-isotope-ratio-mass-spectrometry (LA-ICP-MS) or laser
+induced breakdown spectroscopy (LIBS), can be much faster and
+cost-effective, increasing the number of specimens that can be studied
+overall \citep{Durham2017-fh, Hausmann2023-ih}.
 
 Problematically, links between Mg/Ca ratios and SST changes in many
 marine mollusc shells, including limpets, have shown to be unreliable
@@ -290,35 +264,36 @@ factors that influence the Mg/Ca ratio.
 
 By relying and adding onto published datasets, we were able to
 simultaneously avoid costs for new high-resolution
-δ\textsuperscript{18}O-data, to use real-world examples, and to also
-provide pilot-data for areas of existing research interest. Generally
-establishing the usefulness and reliability of Mg/Ca as SST proxy in
-limpets should help to provide a platform for future research and an
-important stepping stone to better understand elemental ratios in other
-marine mollusc shells.
+\(\delta\)\textsuperscript{18}O-data, to use real-world examples, and to
+also provide pilot-data for areas of existing research interest.
+Generally establishing the usefulness and reliability of Mg/Ca as SST
+proxy in limpets should help to provide a platform for future research
+and an important stepping stone to better understand elemental ratios in
+other marine mollusc shells.
 
 \section{Materials and Methods}\label{Methods}
 
 \subsection{Limpet specimens}\label{limpet-specimens}
 
-\subsubsection{Modern specimens}\label{modern-specimens}
-
 The analysed specimens, their origin and respective studies with
-research background information can be found in \hyperref[Table_1]{Table
-1}. Here we will briefly summarise their contextual information, which
-can be accessed in more detail at the respective studies
+research background information can be found in
+Table\hyperref[Table_1]{1}. Here we will briefly summarise their
+contextual information, which can be accessed in more detail at the
+respective studies
 \citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While those
 studies also included other specimens, their accessibility or state of
 preservation did not all lend them to be re-analysed.
 
 \phantomsection\label{Table_1}
+\fontsize{8pt}{8pt}\selectfont
+
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1667}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2449}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1429}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1633}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1224}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2041}}@{}}
 \caption{Overview of the modern and archaeological limpet specimens
 analysed in this study.}\tabularnewline
 \toprule\noalign{}
@@ -356,34 +331,28 @@ Previous analyses
 \bottomrule\noalign{}
 \endlastfoot
 Modern & \citep{Nicastro2020-ih} & \emph{N. deaureata} & Cambaceres Bay
-- Tierra del Fuego (AR) & ND-1016-3 & Stable oxygen and carbon isotope
-analysis \\
-& & & & ND-1016-4 & \\
-& & \emph{N. magellanica} & & NM-1016-1 & \\
+& ND-1016-3 & Stable oxygen \\
+& & & - Tierra del & ND-1016-4 & and carbon \\
+& & \emph{N. magellanica} & Fuego (AR) & NM-1016-1 & isotope analysis \\
 & & & & NM-1016-3 & \\
-& \citep{Graniero2017-io} & \emph{P. vulgata} & Rack Wick Bay - Westray
-(UK) & ORK-LT5 & Stable oxygen and carbon isotope analysis; Mg, Li, Sr,
-Ca,. \\
+& & & & & \\
+& \citep{Graniero2017-io} & \emph{P. vulgata} & Rack Wick Bay - &
+ORK-LT5 & Stable oxygen \\
+& & & Westray (UK) & & and carbon \\
+& & & & & isotope analysis; \\
+& & & & & Mg, Li, Sr, Ca. \\
+& & & & & \\
 Archaeological & \citep{Surge2012-ba} & \emph{P. vulgata} & Rack Wick
-Bay - Westray (UK) & QG1-7188-1 & Stable oxygen and carbon isotope
-analysis \\
-& & & & QG1-7189-2 & \\
-& & & & QG2-1061-1 & \\
+Bay - & QG1-7188-1 & Stable oxygen \\
+& & & Westray (UK) & QG1-7189-2 & and carbon \\
+& & & & QG2-1061-1 & isotope analysis \\
 & & & & QG2-1064-1 & \\
 & & & & QG2-7180-1 & \\
 & & & & QG2-7180-2 & \\
 & & & & QG1-7246-1 & \\
-& This study & \emph{N. magellanica} & Heshkaia 35 in Moat Bay - Tierra
-del Fuego (AR) & Heshkaia\_35-1 & \emph{none} \\
-& & \emph{N. deaureata} & & Heshkaia\_35-2 & \\
-& & \emph{N. deaureata} & & Heshkaia\_35-3 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-4 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-5 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-6 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-7 & \\
-& & \emph{N. deaureata} & & Heshkaia\_35-8 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-9 & \\
 \end{longtable}
+
+\normalsize
 
 There are two main locations that we sourced specimens from: the Beagle
 Channel in Tierra del Fuego (Argentina) and the island of West Ray in
@@ -400,7 +369,7 @@ experiences virtually no freshwater input with salinity values of 34.0
 -- 34.5 psu \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in
 March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
 
-\begin{figure}
+\begin{figure}[H]
 
 \centering{
 
@@ -408,36 +377,21 @@ March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
 
 }
 
-\caption{\label{fig-SSTs}SST values averaged from years. SST values were
-sourced from \citet{Good2020-nl}}
+\caption{\label{fig-SSTs}Monthly Sea Surface Temperature values averaged
+from years. SST values were sourced from \citet{Good2020-nl}.}
 
 \end{figure}%
 
-\subsubsection{Archaeological specimens}\label{archaeological-specimens}
-
-In total, we studied 16 archaeological specimens. Of those, seven
-\emph{P. vulgata} come from Quoygrew on Westray dating to 900 -- 1200
-CE. These shells have previously been studied to characterise seasonal
-temperature change during the Medieval Climate Anomaly and the Little
-Ice Age \citep{Surge2012-ba}. Together they show a range of lifespans,
-with some comparatively long for their size (QG1-7246-1, 12 years within
-16 mm of growth) making them particularly susceptible to time-averaging.
-That said, the majority are under 5 years old. These shells are an ideal
+In total, we studied 7 archaeological specimens of \emph{P. vulgata}
+coming from Quoygrew on Westray dating to 900 -- 1200 CE. These shells
+have previously been studied to characterise seasonal temperature change
+during the Medieval Climate Anomaly and the Little Ice Age
+\citep{Surge2012-ba}. Together they show a range of lifespans, with some
+comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
+growth) making them particularly susceptible to time-averaging. That
+said, the majority are under 5 years old. These shells are an ideal
 comparative dataset from an archaeological assemblage to compare to the
 modern shell ORK\_LT5 \citep{Graniero2017-io}.
-
-Nine additional shells of \emph{N. magellanica} (n=6) and \emph{N}.
-\emph{deaureata} (n=3) have been selected for LIBS analysis only, to
-provide a comparative dataset to the modern \emph{Nacella} sp. shells.
-These have not been analysed for δ\textsuperscript{18}O-values, but
-rather as a test to see whether patterns visible in the modern Mg/Ca
-ratio distributions are also preserved and apparent in the
-archaeological shells. They derive from the site of Heshkaia 35 situated
-within Moat Bay, around 30 km east of where the modern specimens in our
-study were collected \citep{Zangrando2014-qi, Zangrando2021-qg}. With
-radiocarbon dates putting the shells into the Late Holocene (1300 --
-1450 CE) they are of similar age --- if somewhat younger --- as the
-assemblage from Quoygrew.
 
 \subsection{Methods}\label{methods}
 
@@ -472,10 +426,23 @@ sampling procedures for carbonate powder as part of the oxygen isotope
 analysis left an uneven sample surfaces introducing variability in the
 plasma generation and thus uncertainty in the data of these locations.
 
+\begin{figure}
+
+\centering{
+
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.png}
+
+}
+
+\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} sp. limpet
+shells from Cambaceres Bay.}
+
+\end{figure}%
+
 \subsubsection{Oxygen isotopes}\label{oxygen-isotopes}
 
-High-quality oxygen isotope values (δ\textsuperscript{18}O) were
-acquired from previous publications on \emph{P. vulgata}
+High-quality oxygen isotope values (\(\delta\)\textsuperscript{18}O)
+were acquired from previous publications on \emph{P. vulgata}
 \citep{Surge2012-ba, Graniero2017-io}, \emph{N. deaureata} and \emph{N.
 magellanica} \citep{Nicastro2020-ih}, in which detailed descriptions of
 the stable isotope analysis methodology can be found. In short, all
@@ -488,39 +455,19 @@ reported in per mil units (‰) relative to the VPDB (Vienna Pee Dee
 Belemnite) standard.
 
 Figure~\ref{fig-Nac_iso} and Figure~\ref{fig-Pat_iso} show the
-previously acquired sequential δ\textsuperscript{18}O-values of limpet
-shells by species. Due to the high sampling resolution, all shells show
-seasonally resolved and multi-year quasi-sinusoidal records of SST
-change , with \emph{Nacella} sp. shells living 2--3 years and
+previously acquired sequential \(\delta\)\textsuperscript{18}O-values of
+limpet shells by species. Due to the high sampling resolution, all
+shells show seasonally resolved and multi-year quasi-sinusoidal records
+of SST change , with \emph{Nacella} sp. shells living 2--3 years and
 \emph{Patella v}. regularly over 3 years. In those instances where
 longer lifetimes are encountered (i.e.~specimen QG1-7246-1,
-Figure~\ref{fig-Pat_iso} b). Interestingly, the annual ranges in
-δ\textsuperscript{18}O-values are not similar between the coeval
-\emph{Nacella} sp. specimens with δ\textsuperscript{18}O values for the
-previous summer temperatures ranging from 0.4‰ to above 1.0‰, and for
-winter values between 2.7‰ and 2.0‰. \emph{P. vulgata} has similarly
-variable δ\textsuperscript{18}O-values for summer and winter seasons,
-alas the lack of more that one modern specimens, means that we cannot
-quantify the variability of recorded annual ranges between specimens.
+Figure~\ref{fig-Pat_iso} b).
 
-\begin{figure}
+\begin{figure}[H]
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.pdf}
-
-}
-
-\caption{\label{fig-Nac_iso}Isotope values of \emph{Nacella} sp. limpet
-shells from Cambaceres Bay (\emph{a-f}).}
-
-\end{figure}%
-
-\begin{figure}
-
-\centering{
-
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_iso-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_iso-1.png}
 
 }
 
@@ -530,26 +477,34 @@ limpet shells from Quoygrew (QG, \emph{a-g}) and Rack Wick Bay (ORK,
 
 \end{figure}%
 
+Interestingly, the annual ranges in
+\(\delta\)\textsuperscript{18}O-values are not similar between the
+coeval \emph{Nacella} sp. specimens with \(\delta\)\textsuperscript{18}O
+values for the previous summer temperatures ranging from 0.4‰ to above
+1.0‰, and for winter values between 2.7‰ and 2.0‰. \emph{P. vulgata} has
+similarly variable \(\delta\)\textsuperscript{18}O-values for summer and
+winter seasons, alas the lack of more that one modern specimens, means
+that we cannot quantify the variability of recorded annual ranges
+between specimens.
+
 \subsection{Dynamic Time Warping}\label{dynamic-time-warping}
 
 Because the exact location used in the analysis of stable oxygen
 isotopes is not possible to reconstruct for each carbonate powder
 sample, we used dynamic time warping (DTW) to align the time series of
-δ\textsuperscript{18}O-values and Mg/Ca ratios. DTW is an algorithm that
-measures similarity between two proxy-sequences, which may vary in
-sampling resolution or interval. By stretching or compressing sections
-of the series, DTW finds the probable alignment between the two
-sequences. This allows us to compare the proxy data sets more
-effectively, ensuring that the temporal dynamics of each shell are
+\(\delta\)\textsuperscript{18}O-values and Mg/Ca ratios. DTW is an
+algorithm that measures similarity between two proxy-sequences, which
+may vary in sampling resolution or interval. By stretching or
+compressing sections of the series, DTW finds the probable alignment
+between the two sequences. This allows us to compare the proxy data sets
+more effectively, ensuring that the temporal dynamics of each shell are
 accurately matched despite possible discrepancies in sampling intervals
 or rates. We applied the DTW algorithm using the \texttt{dtw} package in
 R \citep{Giorgino2009-sj, R_Core_Team2020-mk}, which provides a robust
 framework for aligning time series data. This involved selecting
 appropriate distance measures and constraints to ensure meaningful
 alignment. The process involved iterative adjustments to minimise the
-overall distance between corresponding points in the two data sets. The
-code used for this analysis as well as the data required to run it can
-be found in this \textbf{OSF repository}.
+overall distance between corresponding points in the two data sets.
 
 \section{Results}\label{Results}
 
@@ -571,7 +526,7 @@ Mg/Ca intensity ratio consistently falls below the range of interest
 (0.2 and above). Compared to other patelloid shells, whose interior is
 almost entirely made of aragonite, this layer is very thin.
 
-\begin{figure}
+\begin{figure}[H]
 
 \centering{
 
@@ -600,31 +555,32 @@ Line scans also indicate well the quasi-sinusoidal change of Mg/Ca
 intensity ratios expected based on the stable isotope data and
 elemental-imaging. That said, some of the variability of Mg/Ca intensity
 ratios within one season such as the summer period of QG1-7188-1 between
-0.5 and 2.0 mm distance to the shell edge (@fig-Pat\_LIBS d), is visible
-in a more dramatic manner than it appears in the 2D-image, showing the
-downside of line-scanning as opposed to the broader milling approach
-used for the analysis of carbonate powder \citep{Ferguson2011-zl}.
+0.5 and 2.0 mm distance to the shell edge (Figure~\ref{fig-Pat_LIBS} d),
+is visible in a more dramatic manner than it appears in the 2D-image,
+showing the downside of line-scanning as opposed to the broader milling
+approach used for the analysis of carbonate powder
+\citep{Ferguson2011-zl}.
 
 Figure~\ref{fig-Pat_Comp} shows the line scan of ORK-LT5 in comparison
-to its δ\textsuperscript{18}O-values (similar graphs for other specimen
-can be found in the supplementaries). The measurements of the distance
-to the shell edge are not entirely identical, most likely because one
-growth increment can have several different distances. Depending on
-where one measures the distance and a line scan towards the interior
-would be shorter than a line scan towards the exterior. That said,
-increases and decreases of both proxies seem to mirror each other and to
-be well aligned.
+to its \(\delta\)\textsuperscript{18}O-values (similar graphs for other
+specimen can be found in the supplementaries). The measurements of the
+distance to the shell edge are not entirely identical, most likely
+because one growth increment can have several different distances.
+Depending on where one measures the distance and a line scan towards the
+interior would be shorter than a line scan towards the exterior. That
+said, increases and decreases of both proxies seem to mirror each other
+and to be well aligned.
 
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Comp-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Comp-1.png}
 
 }
 
 \caption{\label{fig-Pat_Comp}Comparison of LIBS line-scan and sequential
-δ\textsuperscript{18}O-values of specimen ORK-LT5}
+\(\delta\)\textsuperscript{18}O-values of specimen ORK-LT5}
 
 \end{figure}%
 
@@ -633,19 +589,20 @@ allowed us to compare them directly to determine specimen-specific
 equations and quantify the correlation of both proxies
 (Figure~\ref{fig-Pat_Corr}). The equations for all specimens are
 different but the majority (barring one: QG1-7246-1) do seem to cluster
-around shared parameters (δ\textsuperscript{18}Ο = 0.6 -- 0.065 *
-Mg/Ca). The various coefficients of determination (R\textsuperscript{2})
-range between 0.81 (QG1-7246-1) and 0.95 (QG1-7189-2). These specimens
-are also the oldest and youngest, respectively, specimens, suggesting
-that lower growth rates and time averaging had a negative effect on the
-correlation of both proxies. The mean R\textsuperscript{2} value is
-0.89, suggesting a generally good fit between the two proxies.
+around shared parameters (\(\delta\)\textsuperscript{18}Ο = 0.6 -- 0.065
+* Mg/Ca). The various coefficients of determination
+(R\textsuperscript{2}) range between 0.81 (QG1-7246-1) and 0.95
+(QG1-7189-2). These specimens are also the oldest and youngest,
+respectively, specimens, suggesting that lower growth rates and time
+averaging had a negative effect on the correlation of both proxies. The
+mean R\textsuperscript{2} value is 0.89, suggesting a generally good fit
+between the two proxies.
 
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Corr-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Corr-1.png}
 
 }
 
@@ -670,7 +627,7 @@ repeating patterns were visible in the anterior section of the shell,
 which were also mirrored in the inner layers (m-2) of specimens
 NM-1016-3 (Figure~\ref{fig-Nac_LIBS} c).
 
-\begin{figure}
+\begin{figure}[H]
 
 \centering{
 
@@ -698,33 +655,34 @@ Figure~\ref{fig-Nac_LIBS} c, where Mg/Ca intensity ratios range from
 ratio depends chiefly on the chosen emission lines to calculate the
 proportion of the chosen Magnesium to the Calcium peak, the low ratios
 still indicate lower concentrations than seen elsewhere, or seen only in
-aragonitic parts of e.g.~\emph{Patella} shells.
+aragonitic parts of e.g.~\emph{Patella} shells. Similar observations
+have been made before \citep{Graniero2017-io}.
 
 Line scans reflect well the changes previously indicated by
-δ\textsuperscript{18}O values and also indicate about two years of
-recorded growth. That said, the 2D imaging suggests that in both
+\(\delta\)\textsuperscript{18}O values and also indicate about two years
+of recorded growth. That said, the 2D imaging suggests that in both
 specimens a third summer can be added to the total record, which is not
 captured by the line scans. The variability seen in the \emph{P.
 vulgata} specimens above is not as strong, which might also be related
 to the fast and consistent growth rate of the shells.
 
 Figure~\ref{fig-Nac_Comp} shows the line scans of ND-1016-3 and
-NM-1016-3 in comparison to their δ\textsuperscript{18}O-values (similar
-graphs for the other \emph{Nacella} sp. specimen can be found in the
-supplementaries). Compared to the \emph{P. vulgata} records, these
-mirror each other much more clearly, due to the brief period recorded in
-the shells and its simple make-up.
+NM-1016-3 in comparison to their \(\delta\)\textsuperscript{18}O-values
+(similar graphs for the other \emph{Nacella} sp. specimen can be found
+in the supplementaries). Compared to the \emph{P. vulgata} records,
+these mirror each other much more clearly, due to the brief period
+recorded in the shells and its simple make-up.
 
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Comp-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Comp-1.png}
 
 }
 
 \caption{\label{fig-Nac_Comp}Comparison of LIBS line-scan and sequential
-δ\textsuperscript{18}O-values of specimen ORK-LT5}
+\(\delta\)\textsuperscript{18}O-values of specimen ORK-LT5}
 
 \end{figure}%
 
@@ -749,7 +707,7 @@ scans.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Corr-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Corr-1.png}
 
 }
 
@@ -769,51 +727,42 @@ Nevertheless, the resulting R\textsuperscript{2}-values for each species
 were high (\emph{P. vulgata mean R\textsuperscript{2}}=0.89, \emph{N.
 deaureata mean R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
 R\textsuperscript{2}}=0.88). These results are similar to previously
-published data on \emph{Patella} sp. shells
-(Table~\ref{tbl-other_corrs}). R\textsuperscript{2} values of \emph{P.
+published data on \emph{Patella} sp. shells (Table
+\hyperref[Table_2]{2}). R\textsuperscript{2} values of \emph{P.
 depressa} lie between 0.78 and 0.87 \citep{Garcia-Escarzaga2021-ij}, for
 \emph{P. caerulea} from the Mediterranean between 0.78 and 0.96 ---
-although with one outlier of 0.33, which had increased Mg/Ca ratios in
-increments with rich organic contents \citep{Hausmann2019-fi}.
+although with one outlier of 0.33 (specimen MP64A), which had increased
+Mg/Ca ratios in increments with rich organic contents
+\citep{Hausmann2019-fi}.
 
-\emph{P. rustica} has two studied specimens (JL1 and JL2) with
-R\textsuperscript{2}-values of 0.02 and 0.8, respectively
-\citep{Ferguson2011-zl} Figure~\ref{fig-Ferg}. Together with the data
-from two \emph{P. caerulea} shells (JM00 and JM30 with
-R\textsuperscript{2}-values of 0.69 and 0.83), the data from JL2 was
-used determine a general Mg/Ca-SST relationship with an
-R\textsuperscript{2}-value of 0.79. JL1 was disregarded in that
-calculation, as well as the second year of growth in JM00, which
-produced anomalous data. While no additional information about those
-specimens is available, it seems likely that the Mg/Ca ratios from JM00,
-which were interpreted as an ontogenetic trend, were potentially
-influenced by the same intra-increment heterogeneity we see in some of
-our shell specimens as well. Since these shells were analysed by
-homogenising the carbonate powder of the m+2 layer and the more exterior
-m+3 layer, these heterogeneities could potentially increased the Mg/Ca
-ratio unpredictably, leading to what might look like an ontogenetic
-trend in a linear dataset. Whether these anomalies affected JL1 in the
-same way, albeit stronger, is not clear but it might well be possible.
-
-\begin{table}
-
-\caption{\label{tbl-other_corrs}Table showing correlations of Mg/Ca and
-δ\textsuperscript{18}O found in other studies. * indicates that only SST
-data and no other geochemical data was used. ** these samples were used
-to determine a shared R\textsuperscript{2}-value of 0.79.}
-
-\centering{
-
-}
-
-\end{table}%
+\phantomsection\label{Table_2}
+\fontsize{8pt}{8pt}\selectfont
 
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2973}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1389}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2083}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1667}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1389}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.3472}}@{}}
+\caption{Table showing correlations of Mg/Ca and
+\(\delta\)\textsuperscript{18}O found in other studies. * indicates that
+only SST data and no other geochemical data was used. ** these samples
+were used to determine a shared R\textsuperscript{2}-value of
+0.79.}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Locality
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Specimen
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+R\textsuperscript{2}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Species
@@ -862,11 +811,32 @@ Study
 \citep{Graniero2017-io} and this study \\
 \end{longtable}
 
+\normalsize
+
+\emph{P. rustica} has two studied specimens (JL1 and JL2) with
+R\textsuperscript{2}-values of 0.02 and 0.8, respectively
+\citep{Ferguson2011-zl} (Figure~\ref{fig-Ferg}). Together with the data
+from two \emph{P. caerulea} shells (JM00 and JM30 with
+R\textsuperscript{2}-values of 0.69 and 0.83), the data from JL2 was
+used determine a general Mg/Ca-SST relationship with an
+R\textsuperscript{2}-value of 0.79. JL1 was disregarded in that
+calculation, as well as the second year of growth in JM00, which
+produced anomalous data. While no additional information about those
+specimens is available, it seems likely that the Mg/Ca ratios from JM00,
+which were interpreted as an ontogenetic trend, were potentially
+influenced by the same intra-increment heterogeneity we see in some of
+our shell specimens as well. Since these shells were analysed by
+homogenising the carbonate powder of the m+2 layer and the more exterior
+m+3 layer, these heterogeneities could potentially increased the Mg/Ca
+ratio unpredictably, leading to what might look like an ontogenetic
+trend in a linear dataset. Whether these anomalies affected JL1 in the
+same way, albeit stronger, is not clear but it might well be possible.
+
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Ferg-1.pdf}
+\includegraphics{Manuscript_files/figure-pdf/fig-Ferg-1.png}
 
 }
 
@@ -877,7 +847,7 @@ specimens.}
 
 Another shell whose previous results we aim to explain further is
 ORK-LT5, which has previously been shown to have no substantial
-correlation with δ\textsuperscript{18}O or SST in implication
+correlation with \(\delta\)\textsuperscript{18}O or SST in implication
 \citep{Graniero2017-io}. Different to other specimens of this study, we
 were able to resample this specimen and getting Mg/Ca data on a slightly
 higher resolution (20--30 µm spots in a 100 µm raster compared to 50 µm
@@ -890,7 +860,7 @@ growth at the very edge (dashed box in Figure~\ref{fig-ORK_sub})
 mirroring the change towards warmer temperatures at the time of
 collection (August). Including these missing parts lead to a better
 alignment of both records and a resulting R\textsuperscript{2}-value of
-0.88
+0.88.
 
 \begin{figure}
 
@@ -902,32 +872,55 @@ alignment of both records and a resulting R\textsuperscript{2}-value of
 
 \caption{\label{fig-ORK_sub}Comparison of previous and new Mg/Ca data
 for ORK-LT5 explaining the previously unsuccessful correlation of Mg/Ca
-and δ\textsuperscript{18}O-values}
+and \(\delta\)\textsuperscript{18}O-values}
 
 \end{figure}%
 
 While we were not able to resample the \emph{Nacella} sp. specimens in
-\citeyearpar{Graniero2017-io}.
+Graniero \emph{et al.} \citeyearpar{Graniero2017-io}, we were able to
+source other modern and archaeological specimens of the same species
+from Tierra del Fuego, which can serve as an indicator. Similar to other
+patelloid shells, the results of the \emph{Nacella} specimens in our
+study were successful with high R\textsuperscript{2}-values (0.76--0.95)
+and suggest Mg/Ca as a reliable proxy for SST (Figure~\ref{fig-Nac_Comp}
+and supplementaries). Why these results are different from the studied
+\emph{Nacella} sp. specimens in Graniero et al.
+\citeyearpar{Graniero2017-io} is not obvious, but the occasional
+alignment of the Mg/Ca and \(\delta\)\textsuperscript{18}O records of
+their shells (Figure 6 in \citep{Graniero2017-io} ) indicate that there
+is some relationship that --- potentially due to the low sampling
+resolution or intra-increment heterogeneity --- fell apart and lead to
+an overall result of an uncorrelated relationship between Mg/Ca and SST.
 
-Lastly Nacella in Graniero
+\section{Conclusion}\label{conclusion}
 
-Also the elemental imaging provided some insight into elemental
-anomalies along the increments, that introduce intra-incremental
-heterogeneity and that cannot be reconciled with modern SST changes or
-SST changes recorded in the δ\textsuperscript{18}O of the same shells.
+This study presents high-resolution and 2D information on Mg/Ca
+concentrations in modern and archaeological patelloid shells and their
+relation to sea surface temperature. The results for \emph{Patella
+vulgata}, \emph{Nacella deaureata}, and \emph{Nacella magellanica} were
+consistently promising with mean R\textsuperscript{2}-values of 0.89,
+0.86, and 0.88 respectively.
 
-Why different? Libs can avoid funny bits of shells or interpret them
-when they occur
+LIBS elemental imaging provided some insight into elemental anomalies
+found particulary in the external parts (m+3 layer) of the shell, which
+introduce intra-incremental heterogeneity and which cannot be reconciled
+with modern SST changes or SST changes recorded in the
+\(\delta\)\textsuperscript{18}O of the same shells. Our 2D approach
+allowed us to avoid these areas of intra-increment heterogeneity and
+focus on areas that are predominantly controlled by changes in SST.
 
-what happened elsewhere?
-
-\begin{itemize}
-\item
-  Ferguson did it before but had other correlations (add mine?)
-\item
-  Graniero correlations not available because no data
-\item
-\end{itemize}
+These results are particularly promising for future analyses of
+patelloid shells for the study of season of collection in archaeological
+sites as well as the reconstruction of sub-annual climatic conditions in
+the past. Shells of the species studied here are widely available along
+the European Atlantic façade and the Argentinian coastline and make up a
+large part of marine mollusc remains in archaeological sites of those
+regions. Improving their analysis in terms of cost and time efficiency
+through the benefits of LIBS, which can be used in this context as a
+screening tool for targeted \(\delta\)\textsuperscript{18}O analysis
+focusing on annual minima and maxima revealed in the Mg/Ca record,
+allows researchers to increase sample numbers and produce larger and
+more in-depth climatic studies than previously possible.
 
 
 \renewcommand\refname{References}
